errorlogs/1516528247495-Crawler.py.txt
err:winediag:SECUR32_initNTLMSP ntlm_auth was not found or is outdated. Make sure that ntlm_auth >= 3.0.25 is in your path. Usually, you can find it in the winbind package of your distribution.
146 INFO: PyInstaller: 3.3.1
146 INFO: Python: 3.4.4
146 INFO: Platform: Windows-XP-5.1.2600-SP3
148 INFO: wrote Z:\p2e\Crawler.spec
153 INFO: UPX is not available.
154 INFO: Removing temporary files and cleaning cache in C:\users\root\Application Data\pyinstaller
162 INFO: Extending PYTHONPATH with paths
['Z:\\p2e\\workingdir\\1516528247495', 'Z:\\p2e']
163 INFO: checking Analysis
163 INFO: Building Analysis because out00-Analysis.toc is non existent
163 INFO: Initializing module dependency graph...
172 INFO: Initializing module graph hooks...
176 INFO: Analyzing base_library.zip ...
7303 INFO: Processing pre-find module path hook   distutils
10892 INFO: running Analysis out00-Analysis.toc
11396 INFO: Caching module hooks...
11410 INFO: Analyzing Z:\p2e\workingdir\1516528247495\Crawler.py

Syntax error in Z:\p2e\workingdir\1516528247495\Crawler.py
  File "Z:\p2e\workingdir\1516528247495\Crawler.py", line 113
     except urllib2.HTTPError, e:
                             ^
 SyntaxError: invalid syntax

